# doc2pptx

./: .coverage  .gitignore  .pre-commit-config.yaml  README.md  coverage.xml  demo_doc2pptx.ipynb  env.yml  pyproject.toml
.github/workflows/: ci.yml
data/input/: example2.md  example3.md  example4.md  example5.md  input_markdown.md
data/output/: Rapport_d'Analyse_de_Marché_Web_2025.pptx  cli_example.pptx  example2.pptx
data/templates/: base_template.pptx  templates.pptx
doc/: default_layout_mapping.md  formatting.md  input_markdown_format.md  layout_mapping.md
scripts/: base_template.pptx  display_elements_template.py  display_layout_analysis.py  example_tables.py  final_presentation.pptx  fix_section_types.py  generate_pptx_template.py  slide6.pptx  slide6.py  slide_tableau.pptx
scripts/old/: builder_v1.py  builder_v2.py  builder_v3.py  builder_v4.py  cli_v1.py
src/doc2pptx/: __init__.py  cli.py
src/doc2pptx.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/doc2pptx/api/: __init__.py
src/doc2pptx/core/: __init__.py  models.py  settings.py
src/doc2pptx/editor/: __init__.py
src/doc2pptx/ingest/: __init__.py  json_loader.py  (+1 more)
tests/: conftest.py
tests/e2e/: test_generate.py
tests/unit/: test_builder.py  test_builder_integration.py  test_builder_layout_validation.py  test_builder_slide_types.py  test_builder_tables_styling.py  test_builder_text_filling.py  test_builder_text_formatting.py  test_builder_text_parsing.py  test_builder_v2.py  test_builder_v3.py  test_core.py  test_json_loader.py  test_models.py  test_overflow.py  test_selector.py  test_template.py
(+22 files in other folders)
